profilelist1exp/unpackaged/objects/Agenda__c.object
<CustomObject>
    <description>BOLT &amp; GSL project</description>
    <fields>
        <fullName>AE_Notes_L__c</fullName>
        <description>fixed AE notes field - long text</description>
        <label>AE Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AE_Notes__c</fullName>
        <label>AE Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes_L__c</fullName>
        <description>fixed Analyst Notes - long text</description>
        <label>Analyst Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Analyst Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analyst__c</fullName>
        <formula>Customer_Engagement__r.OwnerId</formula>
        <label>Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Break Id</label>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Agendas</relationshipLabel>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catering_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catering Present?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catering_or_Not__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is created to verify whether an agenda is a catering break or not. Value assignment to this field is handled through custom code</description>
        <label>Catering or Not</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement__c</fullName>
        <label>Customer Engagement</label>
        <referenceTo>Customer_Engagement__c</referenceTo>
        <relationshipLabel>Agendas</relationshipLabel>
        <relationshipName>Agendas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>DATEVALUE( End_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <formula>Customer_Engagement__r.End_DateF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <formula>Customer_Engagement__r.GSL_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>TEXT(Customer_Engagement__r.Event_Type__c)</formula>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Id__c</fullName>
        <label>Presenter Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <label>Presenter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_status__c</fullName>
        <label>Presenter Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <formula>Customer_Engagement__r.Scheduled_RoomF__c</formula>
        <label>Room</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>Customer_Engagement__r.SiteF__c</formula>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATEVALUE( Start_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topic_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic Id</label>
        <referenceTo>Agenda_Topic__c</referenceTo>
        <relationshipLabel>Agendas</relationshipLabel>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Duration__c</fullName>
        <label>Total Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Id</label>
        <referenceTo>Transportation__c</referenceTo>
        <relationshipLabel>Agendas</relationshipLabel>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>item__c</fullName>
        <label>item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Agenda</label>
    <nameField>
        <displayFormat>AG-{0000000000}</displayFormat>
        <label>Agenda Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>